# credit_simulator

./: README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: github-ci.yml
deployment/: Dockerfile
deployment/deploy/: Dockerfile
deployment/test/: Dockerfile
src/controller/: controller.py  trycontroller.py
src/model/loan/adapter/: repository.py  uow.py
src/model/loan/domain/: entity.py  enums.py  interface.py
src/model/loan/service/: loan.py
src/model/test/: test.py
src/view/: BaseView.py  ConsoleView.py
tests/unit/controller/: test_controller.py
tests/unit/model/adapter/: test_repo.py
tests/unit/model/domain/: test_entity.py
tests/unit/model/service/: test_service.py
tests/unit/view/: test_view.py
