[tool.poetry]
name = "credit_simulator"
version = "1.0.0"
description = "Technical test"
authors = ["radya"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
prospector = "^1.5.1"
black = "^22.3.0"
isort = "^5.8.0"
pydantic = "^1.8.2"


[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | database
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
skip = [
  ".git",
  ".venv",
  "database/",
    ".github/workflows/",
    "deployment/",
]

